Update main class to fix errors