@@ -4,7 +4,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class PrinterTest {
-    
+
     private static void pause(long millis) {
         try {
             Thread.sleep(millis);
@@ -13,15 +13,15 @@ public class PrinterTest {
         }
     }
 
-    public static void main(String[] args) throws InterruptedException {
+    public static void main(String[] args) {
         AdvancedPrinterInterface p = new AdvancedPrinter();
 
-        List<Document> docs = new ArrayList<Document>();
+        List<Document> docs = new ArrayList<>();
         docs.add(new Document("ex3/text1.txt"));
         docs.add(new Document("ex3/text2.txt"));
         docs.add(new Document("ex3/text3.txt"));
 
-        p.print(docs.get(0));   // print first document only
+        p.print(docs.getFirst());     // print first document only
         pause(2000);            // wait for a while
 
         p.print(docs);
